* current working state from Sebastian

--- a/sponsors.html
+++ b/sponsors.html
@@ -12,7 +12,7 @@
 		</script>
 	</head>
 	
-	<body class='doodle'>
+	<body>
 		<a name='top'></a>
 		
 		<div id='gdd2011-headArea'>
@@ -41,47 +41,50 @@
 		
 		<div id='gdd2011-page'>
 			
-			<div id='steampunk-control'>
-				<div id='steampunk-img'><a href='javascript:;'><img id='steampunk-control-img' src='./images/stop.png' alt='Steampunk!' title='Steampunk!' /></a></div>
-			</div>
-			
-			<!-- DOODLE -->
-			<div id='doodle_wrapper'>
-				<div id='canvas_wrapper'>
-					<canvas id='surface' width='770' height='501'>
-						<span class='size-22' style='color:red;font-weight:bold;'>*** THIS BROWSER DOES NOT SUPPORT THE CANVAS ELEMENT ***</span>
-						<p>&nbsp;</p>
-						<a href='http://www.google.com/chrome'><span style='color:red;'>Go here and download Google Chrome!</span></a>
-					</canvas>
-				</div>
-			</div>
-			
 			<div id='gdd2011-contentArea'>
-				<div id='gdd2011-page-home-left'>
-					<h2>WTF is GTUG?</h2>
-					<p>
-						<strong>GTUGS are user groups for people who are interested in Google’s developer technology; from Android, App Engine to product APIs like the YouTube & the Google+ API.</strong>
-					</p>
-					<p class='spacer'></p>
-					<p>
-						<a href='http://www.gtugs.org'>www.gtugs.org</a>
-					</p>
+				<h2>Platinum Sponsors</h2>
+				<p class='spacer'></p>
+				<p class='spacer'></p>
+				<div class='gdd2011-page-sponsors-box'>
+					<div class='gdd2011-page-sponsors-box-left'>
+						<img src='./images/sponsors/platinum.jpg' />
+					</div>
+					<div class='gdd2011-page-sponsors-box-right'>
+						<h2>Adobe</h2>
+						<p>Adobe bietet mit der Flash Platform ein erstklassiges Tool zur Multiplattform-Entwicklung für iOS, Android, PlayBook, Desktop-OS und Digital-Home-Devices. Oder klassisch, als Webkomponente für den Browser. Und wer HTML5, jQuery Mobile und PhoneGap nutzt, findet ebenfalls Unterstützung.</p>
+					</div>
+					<div class='clearer'></div>
 				</div>
-				<div id='gdd2011-page-home-right'>
-					<h2>About the Developer-Weekend:</h2>
-					<p><strong>From the 17th to 20th of November the german GTUGs have organized a
-					series of Web/Mobile/Tech-related events around the Google Developer
-					Day in Berlin. Check out now <a href='schedule.html'>Schedule</a></strong></p>
-					<p class='spacer'></p>
-					<p>Starting with the Hack&amp;Tell on Thursday, where interested Hackers can
-					present the projects they where working on, we will kickstart you on
-					Friday with our whole day BootCamp about Android, HTML5 and Googel
-					AppEngine. On Sunday, after the GDD, you will have the opportunity to
-					use all your newly gained knowledge to lay hands on new exciting or
-					existing projects together with all your new friends.</p>
-					
+				<!--<div class='gdd2011-page-sponsors-box'>
+					<div class='gdd2011-page-sponsors-box-left'>
+						<img src='./images/sponsors/platinum.jpg' />
+					</div>
+					<div class='gdd2011-page-sponsors-box-right'>
+						<h2>VZ Netzwerke</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					</div>
+					<div class='clearer'></div>
 				</div>
-				<div class='clearer'></div>
+				<div class='gdd2011-page-sponsors-box'>
+					<div class='gdd2011-page-sponsors-box-left'>
+						<img src='./images/sponsors/platinum.jpg' />
+					</div>
+					<div class='gdd2011-page-sponsors-box-right'>
+						<h2>Immobilienscout24</h2>
+						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+					</div>
+					<div class='clearer'></div>
+				</div>-->
+				<div class='gdd2011-page-sponsors-box'>
+					<div class='gdd2011-page-sponsors-box-left'>
+						<img src='./images/sponsors/platinum.jpg' />
+					</div>
+					<div class='gdd2011-page-sponsors-box-right'>
+						<h2>10gen</h2>
+						<p>10gen develops and provides commercial support and training forMongoDB, the world's most popular open source, document-orienteddatabase. MongoDB is the leading NoSQL data store, bridging the gapbetween key-value stores and traditional relational databasemanagement systems, and providing both agility and scalability todevelopers. Thousands of leading Web 2.0 companies as well as majorFT500 enterprises have adopted MongoDB. To learn more visit www.mongodb.org or check out one of our upcoming community user groups (10gen.com/user-groups) or MongoDB Days (10gen.com/events).</p>
+					</div>
+					<div class='clearer'></div>
+				</div>
 			</div>
 			
 			<div id='gdd2011-sponsors-boxes'>
@@ -140,7 +143,7 @@
 			
 		</div>
 		
-		<!--<script type='text/javascript'>
+		<script type='text/javascript'>
 			(function() {
 				var gdd2011berlin = document.createElement('script'); 
 				gdd2011berlin.type = 'text/javascript';
@@ -148,7 +151,7 @@
 				gdd2011berlin.src = './js/all.min.'+GDD2011BERLIN_VERSION+'.js';
 				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gdd2011berlin, s);
 			})();
-		</script>-->
+		</script>
 		<script type='text/javascript'>
 			(function() {
 				var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
