--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 		
 		<meta http-equiv='Content-Type' content='text/html; charset=utf-8' />
 		<meta name='author' content='Sebastian Roming, Stefan Hoth, Marie Schweiz' />
-		<title>Google Developer Day &amp; GTUG Developer Weekend, 17. - 20. November, c-base Berlin</title>
+		<title>Google Developer Day &amp; GTUG Developer Weekend, 17. - 20. November 2011, c-base Berlin</title>
 		<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
 		<link rel='stylesheet' type='text/css' href='./css/GDD2011Berlin.css' />
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon' />
