Update Maps link to c-base places page, remove additional spacer

--- a/location.html
+++ b/location.html
@@ -49,7 +49,7 @@
 						c-base Raumstation<br />
 						Rungestra&szlig;e 20<br />
 						10379 Berlin<br /><br />
-						<a class='righticon' href='http://maps.google.de/maps?q=c-base+Jannowitzbr%C3%BCcke,+Rungestra%C3%9Fe+20,+10179+Berlin&hl=de&ie=UTF8&sll=51.151786,10.415039&sspn=19.064794,53.569336&vpsrc=0&t=h&z=16'>Google Maps</a>
+						<a class='righticon' href='http://maps.google.de/maps/place?q=c-base+Jannowitzbr%C3%BCcke,+Rungestra%C3%9Fe+20,+10179+Berlin&hl=de&ie=UTF8&cid=10710432516262848279'>Google Maps</a>
 					</p>
 				</div>
 				
