--- a/sponsors.html
+++ b/sponsors.html
@@ -63,7 +63,7 @@
 				<div class='gdd2011-page-sponsors-box'>
 					<div class='gdd2011-page-sponsors-box-left'>
 						<a href='http://www.vz-netzwerke.net/' title='VZ Networks'>
-							<img src='./images/sponsors/BIG_vz.png' />
+							<img src='./images/sponsors/BIG_VZ.png' />
 						</a>	
 					</div>
 					<div class='gdd2011-page-sponsors-box-right'>
