Reactivate doodle-script

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 			
 		</div>
 		
-		<!--<script type='text/javascript'>
+		<script type='text/javascript'>
 			(function() {
 				var gdd2011berlin = document.createElement('script'); 
 				gdd2011berlin.type = 'text/javascript';
@@ -164,6 +164,6 @@
 				gdd2011berlin.src = './js/all.min.'+GDD2011BERLIN_VERSION+'.js';
 				var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(gdd2011berlin, s);
 			})();
-		</script>-->
+		</script>
 	</body>
 </html>
