Add HNT-Link, add flea market

--- a/schedule.html
+++ b/schedule.html
@@ -63,7 +63,9 @@
 						<p class='spacer'></p>
 						
 						<div class='gdd2011-page-schedule-line nolines'>
-							<img class="schedule teaser" src="images/teaser-hackandtell.png" alt="Berlin Hack and Tell" />
+							<a href="http://berlin.hackandtell.org" title="Berlin Hack and Tell">
+								<img class="schedule teaser" src="images/teaser-hackandtell.png" alt="Berlin Hack and Tell" />
+							</a>
 							<p>
 								 Take a cool hack, which could be almost anything from
 								 a mobile app, a website, a library up to a full game or service,								 
@@ -94,6 +96,12 @@
 						<div class='gdd2011-page-schedule-line'>
 							<div class='gdd2011-page-schedule-time'>19:10</div>
 							<div class='gdd2011-page-schedule-full'>1st round of demos</div>
+							<div class='clearer'></div>
+						</div>
+
+						<div class='gdd2011-page-schedule-line'>
+							<div class='gdd2011-page-schedule-time'>19:50</div>
+							<div class='gdd2011-page-schedule-full'></div>
 							<div class='clearer'></div>
 						</div>
 					
