--- a/schedule.html
+++ b/schedule.html
@@ -101,7 +101,7 @@
 
 						<div class='gdd2011-page-schedule-line'>
 							<div class='gdd2011-page-schedule-time'>19:50</div>
-							<div class='gdd2011-page-schedule-full'></div>
+							<div class='gdd2011-page-schedule-full'>Flea market</div>
 							<div class='clearer'></div>
 						</div>
 					
