--- a/schedule.html
+++ b/schedule.html
@@ -249,7 +249,7 @@
 							<div class='gdd2011-page-schedule-time'>15:30 - 16:00</div>
 							<div class='gdd2011-page-schedule-cbase'>Tablet use case</div>
 							<div class='gdd2011-page-schedule-spacer'></div>
-							<div class='gdd2011-page-schedule-epsylonflyer'>HTML5 / Audo Data API</div>
+							<div class='gdd2011-page-schedule-epsylonflyer'>The State of HTML5 Audio</div>
 							<div class='clearer'></div>
 						</div>
 						<div class='gdd2011-page-schedule-line'>
@@ -277,7 +277,7 @@
 						<div class='gdd2011-page-schedule-line nolines'>
 							<p>The day we've all waited for has finally arrived: Google Developer Day is a one-day event featuring advanced technical content on Google platforms and products from the teams that work on them. More than 2000 developers came to berlin to talk about new technologies, see them in practice and meet each other.</p>
 							<p>The GTUGs will have their own areas at the GDD, separated into a Sandbox where Developers can present their Apps/Work and we will have a GoogleTV Set, a SonyEricsson XPeria Play with Minecraft and a Chillout area to connect and network.</p>
-							<p>Check the <a href="http://www.google.com/events/develeoperday/2011/berlin/agenda.html">official agenda of #gddde</a> for a detailed overview of the tracks and talks taking place at ICC. Use your chance to speak to the Google engineers creating the stuff you use and work with every day and don't forget to meet the GTUGs in the lounge and sit down for a chat. See you!</p>
+							<p>Check the <a href="http://www.google.com/events/developerday/2011/berlin/agenda.html">official agenda of #gddde</a> for a detailed overview of the tracks and talks taking place at ICC. Use your chance to speak to the Google engineers creating the stuff you use and work with every day and don't forget to meet the GTUGs in the lounge and sit down for a chat. See you!</p>
 						</div>
 												
 					</div>
