--- a/sponsors.html
+++ b/sponsors.html
@@ -153,7 +153,7 @@
 					<a href='http://www.seeedstudio.com/' title='seeedstudio'><img src='./images/sponsors/seeed.png' alt='seeedstudio' /></a>
 				</div>
 				<div class='gdd2011-sponsorbox'>
-					<a href='http://www.cat-sound.com/' title='Cat Sound'><img src='./images/sponsors/catsound.png' alt='Cat Sound' /></a>
+					<a href='http://tablet.cat-sound.com/' title='Cat Sound'><img src='./images/sponsors/catsound.png' alt='Cat Sound' /></a>
 				</div>
 				<div class='gdd2011-sponsorbox'>
 					<a href='http://android360.de/' title='android 360'><img src='./images/sponsors/android360.png' alt='android 360' /></a>
